--- a/src/components/MainLayout/styles.module.scss
+++ b/src/components/MainLayout/styles.module.scss
@@ -7,6 +7,24 @@
   }
   
   .header {
+    width: 100%;
     height: 3rem;
+
+    position: fixed;
+    z-index: 1;
+  }
+
+  .sidebar {
+    overflow: auto;
+    width: 100%;
+    height: calc(100vh - 3rem);
+    position: fixed;
+    right: 0;
+    top: 3rem;
+    bottom: 0;
+  }
+
+  .content {
+    margin-right: 12.5rem;
   }
 }
