detect box position & sidebar UI

--- a/src/components/MainLayout/styles.module.scss
+++ b/src/components/MainLayout/styles.module.scss
@@ -25,6 +25,8 @@
   }
 
   .content {
-    margin-right: 12.5rem;
+    margin-top: 3rem;
+    margin-right: 18.75rem;
+    background-color: #e5e5e5;
   }
 }
