--- a/src/modules/SidebarSelected/styles.module.scss
+++ b/src/modules/SidebarSelected/styles.module.scss
@@ -1,5 +1,4 @@
 .container {
-
   .line {
     margin: 0;
     background-color: #f0f0f0;
@@ -18,9 +17,23 @@
     font-weight: 600;
     font-size: 0.875rem;
     line-height: 1.375rem;
+    color: rgba(0, 0, 0, 0.85);
+  }
+
+  .content {
+    font-weight: 400;
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    color: #333333;
   }
 
   .iconGroup {
     gap: 4px;
+  }
+
+  .symbol {
+    width: 1rem;
+    height: 1rem;
+    color: rgba(0, 0, 0, 0.25);
   }
 }
